--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ body {font-family: "Lato", sans-serif}
     </div> -->
   </div>
 
-  <!-- The Band Section -->
+  <!-- The Bestyrelse Section -->
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px">
     <h2 class="w3-wide">FREDERIKSODDEKORET</h2>
     <p class="w3-opacity"><i>Vi elsker musik</i></p>
@@ -63,11 +63,11 @@ body {font-family: "Lato", sans-serif}
         Kom og vær en del af fællesskabet i Frederiksoddekoret, hvor musikken binder os sammen!</p>
   </div>
 
-  <div class="w3-container w3-content w3-center w3-padding-32" style="max-width: 800px;" id="bestyrelsen">
+  <div class="w3-container w3-content w3-center w3-padding-32" style="max-width: 50%;" id="bestyrelsen">
     <h2>BESTYRELSEN</h2>
   </div>
 
-  <div class="w3-container w3-center w3-content" style="max-width: 800px;">
+  <div class="w3-container w3-center w3-content w3-margin-bottom" style="max-width: 800px;">
     <div class="w3-row-padding">
     
       <div class="w3-quarter">
@@ -116,9 +116,9 @@ body {font-family: "Lato", sans-serif}
     </div>
   </div>
 
-  <!-- The Tour Section -->
+  <!-- The Calender Section -->
   <div class="w3-black" id="kalender">
-    <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
+    <div class="w3-container w3-content w3-padding-64" style="max-width:50%">
       <h2 class="w3-wide w3-center">KALENDER</h2>
       <p class="w3-opacity w3-center"><i>Se her hvornår vi øver og holder koncerter</i></p><br>
 
