--- a/static/header.html
+++ b/static/header.html
@@ -19,7 +19,7 @@
   </div>
   
   <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
-  <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
+  <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px max-width:100%">
     <a href="index.html#band" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">BESTYRELSEN</a>
     <a href="index.html#tour" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">KALENDER</a>
     <a href="index.html#contact" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">KONTAKT</a>
