--- a/static/header.html
+++ b/static/header.html
@@ -1,5 +1,5 @@
 <!-- Navbar -->
-<div class="w3-top">
+<div class="w3-top" style="max-width:100%">
     <div class="w3-bar w3-black w3-card">
       <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
       <a href="index.html" class="w3-bar-item w3-button w3-padding-large">HJEM</a>
@@ -19,7 +19,7 @@
   </div>
   
   <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
-  <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px max-width:100%">
+  <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
     <a href="index.html#band" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">BESTYRELSEN</a>
     <a href="index.html#tour" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">KALENDER</a>
     <a href="index.html#contact" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">KONTAKT</a>
