--- a/index.html
+++ b/index.html
@@ -117,105 +117,105 @@ body {font-family: "Lato", sans-serif}
   </div>
 
   <!-- The Calender Section -->
-  <div class="w3-black w3-mobile" id="kalender">
+  <div class="w3-black" id="kalender">
     <div class="w3-container w3-content w3-padding-64" style="max-width:50%">
       <h2 class="w3-wide w3-center">KALENDER</h2>
       <p class="w3-opacity w3-center"><i>Se her hvornår vi øver og holder koncerter</i></p><br>
 
       <table class="w3-table w3-bordered">
         <tr>
-          <th>Dag</th>
+          <th class="w3-hide-small">Dag</th>
           <th>Dato</th>
           <th>Aktivitet</th>
           <th>Tid</th>
           <th>Sted</th>
         </tr>
         <tr>
-          <td>Tirsdag</td>
+          <td class="w3-hide-small">Tirsdag</td>
           <td>22.10.2024</td>
           <td>Øveaften</td>
           <td>19:00 - 21:30</td>
           <td>Kongensgade 111, Lokale 2, syd 1</td>
         </tr>
         <tr>
-          <td>Tirsdag</td>
+          <td class="w3-hide-small">Tirsdag</td>
           <td>29.10.2024</td>
           <td>Øveaften</td>
           <td>19:00 - 21:30</td>
           <td>Kongensgade 111, Lokale 2, syd 1</td>
         </tr>
         <tr>
-          <td>Tirsdag</td>
+          <td class="w3-hide-small">Tirsdag</td>
           <td>05.11.2024</td>
           <td>Øveaften</td>
           <td>19:00 - 21:30</td>
           <td>Kongensgade 111, Lokale 2, syd 1</td>
         </tr>
         <tr>
-          <td>Tirsdag</td>
+          <td class="w3-hide-small">Tirsdag</td>
           <td>12.11.2024</td>
           <td>Øveaften</td>
           <td>19:00 - 21:30</td>
           <td>Kongensgade 111, Lokale 2, syd 1</td>
         </tr>
         <tr>
-          <td>Tirsdag</td>
+          <td class="w3-hide-small">Tirsdag</td>
           <td>19.11.2024</td>
           <td>Øveaften</td>
           <td>19:00 - 21:30</td>
           <td>Tilgår senere</td>
         </tr>
         <tr>
-          <td>Tirsdag</td>
+          <td class="w3-hide-small">Tirsdag</td>
           <td>26.11.2024</td>
           <td>Øveaften</td>
           <td>19:00 - 21:30</td>
           <td>Kongensgade 111, Lokale 2, syd 1</td>
         </tr>
         <tr>
-          <td>Tirsdag</td>
+          <td class="w3-hide-small">Tirsdag</td>
           <td>03.12.2024</td>
           <td>Øveaften</td>
           <td>19:00 - 21:30</td>
           <td>Kongensgade 111, Lokale 2, syd 1</td>
         </tr>
         <tr>
-          <td>Tirsdag</td>
+          <td class="w3-hide-small">Tirsdag</td>
           <td>10.12.2024</td>
           <td>Øveaften</td>
           <td>19:00 - 21:30</td>
           <td>Kongensgade 111, Lokale 2, syd 1</td>
         </tr>
         <tr>
-          <td>Onsdag</td>
+          <td class="w3-hide-small">Onsdag</td>
           <td>11.12.2024</td>
           <td>Julekoncert</td>
           <td>Tilgår senere</td>
           <td>Den Reformerte Kirke, Dronningensgade 87</td>
         </tr>
         <tr>
-          <td>Tirsdag</td>
+          <td class="w3-hide-small">Tirsdag</td>
           <td>17.12.2024</td>
           <td>Julefrokost</td>
           <td>19:00 - ?</td>
           <td>Kongensgade 111, Lokale 2, syd 1</td>
         </tr>
         <tr>
-          <td>Tirsdag</td>
+          <td class="w3-hide-small">Tirsdag</td>
           <td>24.12.2024</td>
           <td>Juleferie</td>
           <td></td>
           <td></td>
         </tr>
         <tr>
-          <td>Tirsdag</td>
+          <td class="w3-hide-small">Tirsdag</td>
           <td>31.12.2024</td>
           <td>Juleferie</td>
           <td></td>
           <td></td>
         </tr>
         <tr>
-          <td>Tirsdag</td>
+          <td class="w3-hide-small">Tirsdag</td>
           <td>07.01.2025</td>
           <td>Øveaften</td>
           <td>19:00 - 21:30</td>
