--- a/static/header.html
+++ b/static/header.html
@@ -12,6 +12,7 @@
           <a href="galleri.html" class="w3-bar-item w3-button">Galleri</a>
           <a href="repetoire.html" class="w3-bar-item w3-button">Repetoire</a>
           <a href="praktisk.html" class="w3-bar-item w3-button">Praktisk Information</a>
+          <a href="kalender.html" class="w3-bar-item w3-button">kalender</a>
         </div>
       </div>
       <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a>
@@ -24,4 +25,7 @@
     <a href="index.html#tour" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">KALENDER</a>
     <a href="index.html#contact" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">KONTAKT</a>
     <a href="galleri.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">GALLERI</a>
+    <a href="repetoire.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">REPETOIRE</a>
+    <a href="praktisk.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">PRAKTISK</a>
+    <a href="kalender.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">KALENDER</a>
   </div>
