--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body {font-family: "Lato", sans-serif}
 
 
 <!-- Page content -->
-<div class="w3-content" style="max-width:2000px;margin-top:46px">
+<div class="w3-content" style="max-width:80%;margin-top:46px">
 
   <!-- Automatic Slideshow Images -->
   <div class="mySlides w3-display-container w3-center">
@@ -55,7 +55,7 @@ body {font-family: "Lato", sans-serif}
   </div>
 
   <!-- The Bestyrelse Section -->
-  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px">
+  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:80%">
     <h2 class="w3-wide">FREDERIKSODDEKORET</h2>
     <p class="w3-opacity"><i>Vi elsker musik</i></p>
     <p class="w3-justify">Vi byder dig velkommen til Frederiksoddekoret, som blev dannet den 3. september 2024 som en spændende sammensmeltning af Lyngsoddekoret og Mandagskoret. Med 60 engagerede medlemmer synger vi i 4 stemmer, hvilket skaber en rig og harmonisk klang.
@@ -63,11 +63,11 @@ body {font-family: "Lato", sans-serif}
         Kom og vær en del af fællesskabet i Frederiksoddekoret, hvor musikken binder os sammen!</p>
   </div>
 
-  <div class="w3-container w3-content w3-center w3-padding-32" style="max-width: 50%;" id="bestyrelsen">
+  <div class="w3-container w3-content w3-center w3-padding-32" style="max-width: 80%;" id="bestyrelsen">
     <h2>BESTYRELSEN</h2>
   </div>
 
-  <div class="w3-container w3-center w3-content w3-margin-bottom" style="max-width: 800px;">
+  <div class="w3-container w3-center w3-content w3-margin-bottom" style="max-width: 80%;">
     <div class="w3-row-padding">
     
       <div class="w3-quarter">
@@ -116,112 +116,7 @@ body {font-family: "Lato", sans-serif}
     </div>
   </div>
 
-  <!-- The Calender Section -->
-  <div class="w3-black" id="kalender">
-    <div class="w3-container w3-content w3-padding-64" style="max-width:50%">
-      <h2 class="w3-wide w3-center">KALENDER</h2>
-      <p class="w3-opacity w3-center"><i>Se her hvornår vi øver og holder koncerter</i></p><br>
-
-      <table class="w3-table w3-bordered">
-        <tr>
-          <th class="w3-hide-small">Dag</th>
-          <th>Dato</th>
-          <th>Aktivitet</th>
-          <th>Tid</th>
-          <th>Sted</th>
-        </tr>
-        <tr>
-          <td class="w3-hide-small">Tirsdag</td>
-          <td>22.10.2024</td>
-          <td>Øveaften</td>
-          <td>19:00 - 21:30</td>
-          <td>Kongensgade 111, Lokale 2, syd 1</td>
-        </tr>
-        <tr>
-          <td class="w3-hide-small">Tirsdag</td>
-          <td>29.10.2024</td>
-          <td>Øveaften</td>
-          <td>19:00 - 21:30</td>
-          <td>Kongensgade 111, Lokale 2, syd 1</td>
-        </tr>
-        <tr>
-          <td class="w3-hide-small">Tirsdag</td>
-          <td>05.11.2024</td>
-          <td>Øveaften</td>
-          <td>19:00 - 21:30</td>
-          <td>Kongensgade 111, Lokale 2, syd 1</td>
-        </tr>
-        <tr>
-          <td class="w3-hide-small">Tirsdag</td>
-          <td>12.11.2024</td>
-          <td>Øveaften</td>
-          <td>19:00 - 21:30</td>
-          <td>Kongensgade 111, Lokale 2, syd 1</td>
-        </tr>
-        <tr>
-          <td class="w3-hide-small">Tirsdag</td>
-          <td>19.11.2024</td>
-          <td>Øveaften</td>
-          <td>19:00 - 21:30</td>
-          <td>Tilgår senere</td>
-        </tr>
-        <tr>
-          <td class="w3-hide-small">Tirsdag</td>
-          <td>26.11.2024</td>
-          <td>Øveaften</td>
-          <td>19:00 - 21:30</td>
-          <td>Kongensgade 111, Lokale 2, syd 1</td>
-        </tr>
-        <tr>
-          <td class="w3-hide-small">Tirsdag</td>
-          <td>03.12.2024</td>
-          <td>Øveaften</td>
-          <td>19:00 - 21:30</td>
-          <td>Kongensgade 111, Lokale 2, syd 1</td>
-        </tr>
-        <tr>
-          <td class="w3-hide-small">Tirsdag</td>
-          <td>10.12.2024</td>
-          <td>Øveaften</td>
-          <td>19:00 - 21:30</td>
-          <td>Kongensgade 111, Lokale 2, syd 1</td>
-        </tr>
-        <tr>
-          <td class="w3-hide-small">Onsdag</td>
-          <td>11.12.2024</td>
-          <td>Julekoncert</td>
-          <td>Tilgår senere</td>
-          <td>Den Reformerte Kirke, Dronningensgade 87</td>
-        </tr>
-        <tr>
-          <td class="w3-hide-small">Tirsdag</td>
-          <td>17.12.2024</td>
-          <td>Julefrokost</td>
-          <td>19:00 - ?</td>
-          <td>Kongensgade 111, Lokale 2, syd 1</td>
-        </tr>
-        <tr>
-          <td class="w3-hide-small">Tirsdag</td>
-          <td>24.12.2024</td>
-          <td>Juleferie</td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td class="w3-hide-small">Tirsdag</td>
-          <td>31.12.2024</td>
-          <td>Juleferie</td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td class="w3-hide-small">Tirsdag</td>
-          <td>07.01.2025</td>
-          <td>Øveaften</td>
-          <td>19:00 - 21:30</td>
-          <td>Kongensgade 111, Lokale 2, syd 1</td>
-        </tr>
-      </table>
+  
 
 
 <!--
@@ -258,7 +153,7 @@ body {font-family: "Lato", sans-serif}
   </div>
 
   <!-- The Contact Section -->
-  <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="kontakt">
+  <div class="w3-container w3-content w3-padding-64" style="max-width:80%" id="kontakt">
     <h2 class="w3-wide w3-center">KONTAKT</h2>
     <p class="w3-opacity w3-center"><i>Interesseret i at være med i koret? Så kontakt os</i></p>
     
