--- a/galleri.html
+++ b/galleri.html
@@ -55,7 +55,7 @@ body {font-family: "Lato", sans-serif}
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="galleri">
     <h2 class="w3-wide">Galleri</h2>
     <p class="w3-opacity"><i></i></p>
-    <p class="w3-justify">Velkommen til vores galleri hvor du finder billeder fra øveaftener, koncerter og mere.</p>
+    <p class="w3-justify w3-center">Velkommen til vores galleri hvor du finder billeder fra øveaftener, koncerter og mere.</p>
   </div>
 
   <!-- Images -->
