--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ body {font-family: "Lato", sans-serif}
   <!-- The Bestyrelse Section -->
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:80%">
     <h2 class="w3-wide w3-hide-small">FREDERIKSODDEKORET</h2>
-    <p class="w3-hide-medium w3-hide-large"><b>FREDERIKSODDEKORET</b></p>
+    <p class="w3-wide w3-hide-medium w3-hide-large"><b>FREDERIKSODDEKORET</b></p>
     <p class="w3-opacity"><i>Vi elsker musik</i></p>
     <p class="w3-justify">Vi byder dig velkommen til Frederiksoddekoret, som blev dannet den 3. september 2024 som en spændende sammensmeltning af Lyngsoddekoret og Mandagskoret. Med 60 engagerede medlemmer synger vi i 4 stemmer, hvilket skaber en rig og harmonisk klang.
         Hos os er der plads til alle – der er ingen optagelsesprøver, og alle med lyst til at synge er hjerteligt velkomne. Vores øveaftener finder sted hver tirsdag fra kl. 19.00 til 21.30, hvor vi sammen udforsker og udvikler vores sangfærdigheder.
