--- a/kalender.html
+++ b/kalender.html
@@ -42,98 +42,98 @@ body {font-family: "Lato", sans-serif}
         <th>Dato</th>
         <th>Aktivitet</th>
         <th>Tid</th>
-        <th>Sted</th>
+        <th class="w3-hide-small">Sted</th>
       </tr>
       <tr>
         <td class="w3-hide-small">Tirsdag</td>
         <td>22.10.2024</td>
         <td>Øveaften</td>
         <td>19:00 - 21:30</td>
-        <td>Kongensgade 111, Lokale 2, syd 1</td>
+        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
       </tr>
       <tr>
         <td class="w3-hide-small">Tirsdag</td>
         <td>29.10.2024</td>
         <td>Øveaften</td>
         <td>19:00 - 21:30</td>
-        <td>Kongensgade 111, Lokale 2, syd 1</td>
+        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
       </tr>
       <tr>
         <td class="w3-hide-small">Tirsdag</td>
         <td>05.11.2024</td>
         <td>Øveaften</td>
         <td>19:00 - 21:30</td>
-        <td>Kongensgade 111, Lokale 2, syd 1</td>
+        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
       </tr>
       <tr>
         <td class="w3-hide-small">Tirsdag</td>
         <td>12.11.2024</td>
         <td>Øveaften</td>
         <td>19:00 - 21:30</td>
-        <td>Kongensgade 111, Lokale 2, syd 1</td>
+        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
       </tr>
       <tr>
         <td class="w3-hide-small">Tirsdag</td>
         <td>19.11.2024</td>
         <td>Øveaften</td>
         <td>19:00 - 21:30</td>
-        <td>Tilgår senere</td>
+        <td class="w3-hide-small">Tilgår senere</td>
       </tr>
       <tr>
         <td class="w3-hide-small">Tirsdag</td>
         <td>26.11.2024</td>
         <td>Øveaften</td>
         <td>19:00 - 21:30</td>
-        <td>Kongensgade 111, Lokale 2, syd 1</td>
+        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
       </tr>
       <tr>
         <td class="w3-hide-small">Tirsdag</td>
         <td>03.12.2024</td>
         <td>Øveaften</td>
         <td>19:00 - 21:30</td>
-        <td>Kongensgade 111, Lokale 2, syd 1</td>
+        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
       </tr>
       <tr>
         <td class="w3-hide-small">Tirsdag</td>
         <td>10.12.2024</td>
         <td>Øveaften</td>
         <td>19:00 - 21:30</td>
-        <td>Kongensgade 111, Lokale 2, syd 1</td>
+        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
       </tr>
       <tr>
         <td class="w3-hide-small">Onsdag</td>
         <td>11.12.2024</td>
         <td>Julekoncert</td>
         <td>Tilgår senere</td>
-        <td>Den Reformerte Kirke, Dronningensgade 87</td>
+        <td class="w3-hide-small">Den Reformerte Kirke, Dronningensgade 87</td>
       </tr>
       <tr>
         <td class="w3-hide-small">Tirsdag</td>
         <td>17.12.2024</td>
         <td>Julefrokost</td>
         <td>19:00 - ?</td>
-        <td>Kongensgade 111, Lokale 2, syd 1</td>
+        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
       </tr>
       <tr>
         <td class="w3-hide-small">Tirsdag</td>
         <td>24.12.2024</td>
         <td>Juleferie</td>
         <td></td>
-        <td></td>
+        <td class="w3-hide-small"></td>
       </tr>
       <tr>
         <td class="w3-hide-small">Tirsdag</td>
         <td>31.12.2024</td>
         <td>Juleferie</td>
         <td></td>
-        <td></td>
+        <td class="w3-hide-small"></td>
       </tr>
       <tr>
         <td class="w3-hide-small">Tirsdag</td>
         <td>07.01.2025</td>
         <td>Øveaften</td>
         <td>19:00 - 21:30</td>
-        <td>Kongensgade 111, Lokale 2, syd 1</td>
+        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
       </tr>
     </table>
 </div>
