--- a/kalender.html
+++ b/kalender.html
@@ -34,8 +34,8 @@ body {font-family: "Lato", sans-serif}
 <div class="w3-black" id="kalender">
   <div class="w3-container w3-content w3-padding-64" style="max-width:80%">
     <h2 class="w3-wide w3-center">KALENDER</h2>
-    <p class="w3-opacity w3-center"><i>Se her hvornår vi øver og holder koncerter</i></p><br>
-    <p class="w3-opacity w3-center w3-hide-large w3-hide-medium"><i>øveaftener foregår på den kreative skole på Kongensgade 111, Lokale 2, syd 1</i></p><br>
+    <p class="w3-opacity w3-center"><i>Se her hvornår vi øver og holder koncerter</i></p>
+    <p class="w3-opacity w3-center w3-hide-large w3-hide-medium"><i>Øveaftener foregår på den kreative skole på Kongensgade 111, Lokale 2, syd 1</i></p><br>
 
     <table class="w3-table w3-bordered">
       <tr>
