--- a/index.html
+++ b/index.html
@@ -31,9 +31,28 @@ body {font-family: "Lato", sans-serif}
 <!-- Page content -->
 <div class="w3-content" style="max-width:2000px;margin-top:46px">
 
-  <div class="w3-container w3-content w3-center">
-    <img src="static/Images/logo3.png" alt="Logo" style="width: 100%;">
+  <!-- Automatic Slideshow Images -->
+<div class="mySlides w3-display-container w3-center">
+  <img src="static/Images/Choir.jpg" style="width:100%">
+  <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+    <h3></h3>
+    <p><b></b></p>   
   </div>
+</div>
+<!--  <div class="mySlides w3-display-container w3-center">
+  <img src="/w3images/ny.jpg" style="width:100%">
+  <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+    <h3>New York</h3>
+    <p><b>The atmosphere in New York is lorem ipsum.</b></p>    
+  </div>
+</div>
+<div class="mySlides w3-display-container w3-center">
+  <img src="/w3images/chicago.jpg" style="width:100%">
+  <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+    <h3>Chicago</h3>
+    <p><b>Thank you, Chicago - A night we won't forget.</b></p>    
+  </div> -->
+</div>
   
   <!-- The Bestyrelse Section -->
 
