--- a/index.html
+++ b/index.html
@@ -53,13 +53,18 @@ body {font-family: "Lato", sans-serif}
     <p><b>Thank you, Chicago - A night we won't forget.</b></p>    
   </div> -->
 </div>
+
+<div class="w3-container w3-center" style="margin-top: 46px;">
+<h1 class="w3-hide-small">FREDERIKSODDEKORET</h1>
+<h3 class="w3-hide-large w3-hide-medium">FREDERIKSODDEKORET</h3>
+</div>
   
   <!-- The Bestyrelse Section -->
 
 
 
 
-  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:80%">
+  <div class="w3-container w3-content w3-center w3-padding-32" style="max-width:80%">
   
     <p class="w3-opacity"><i>Vi elsker musik</i></p>
     <p class="w3-justify">Vi byder dig velkommen til Frederiksoddekoret, som blev dannet den 3. september 2024 som en spændende sammensmeltning af Lyngsoddekoret og Mandagskoret. Med 60 engagerede medlemmer synger vi i 4 stemmer, hvilket skaber en rig og harmonisk klang.
