--- a/praktisk.html
+++ b/praktisk.html
@@ -64,21 +64,21 @@ body {font-family: "Lato", sans-serif}
   Nyt medlem</button>
   
   <div id="nyMedlem" class="w3-hide w3-container w3-center w3-light-grey">
-    <p>Hvis du gerne vil være med i koret skal du blot møde op til en af vores øveaftener. Alle er velkomne. Se på vores <a href="kalender.html">kalender</a> hvor og hvornår vi øver</p>
+    <p style="max-width: 80%;">Hvis du gerne vil være med i koret skal du blot møde op til en af vores øveaftener. Alle er velkomne. Se på vores <a href="kalender.html">kalender</a> hvor og hvornår vi øver</p>
   </div>
 
 <button onclick="accordian('kontingent')" class="w3-btn w3-block w3-black w3-margin-top">
     Kontingent</button>
     
 <div id="kontingent" class="w3-hide w3-container w3-center w3-light-grey">
-  <p>Det koster 500 kr pr halvår at være med i koret. Du vil som medlem få en mail når det er tid til at betale med information om hvordan kontingentet skal betales</p>
+  <p style="max-width: 80%;">Det koster 500 kr pr halvår at være med i koret. Du vil som medlem få en mail når det er tid til at betale med information om hvordan kontingentet skal betales</p>
 </div>
 
 <button onclick="accordian('parkering')" class="w3-btn w3-block w3-black w3-margin-top">
       Parkering</button>
       
 <div id="parkering" class="w3-hide w3-container w3-center w3-light-grey">
-  <p>Man kan parkere gratis langs Kongensgade foran skolen. Hvis der ikke er plads på Kongensgade kan man også parkere gratis ved Fredericia Sundhedshus på Dronningensgade 97 som er fem minutters gang fra skolen.</p>
+  <p style="max-width: 80%;">Man kan parkere gratis langs Kongensgade foran skolen. Hvis der ikke er plads på Kongensgade kan man også parkere gratis ved Fredericia Sundhedshus på Dronningensgade 97 som er fem minutters gang fra skolen.</p>
 </div>
 
 </div>
