--- a/galleri.html
+++ b/galleri.html
@@ -62,20 +62,15 @@ body {font-family: "Lato", sans-serif}
   <div class="w3-row-padding w3-margin-top">
   <div class="w3-third">
     <div class="w3-card">
-      <img src="static/Images/Galleri/Piano.jpg" style="width:100%">
+      <img src="static/Images/Kor2.jpg" style="width:100%">
       <div class="w3-container">
-        <h4>Klaverøvelser</h4>
+        <h4>Koret - 29.10.2024</h4>
       </div>
     </div>
   </div>
-  <div class="w3-third">
-    <div class="w3-card">
-      <img src="static/Images/Galleri/Piano.jpg" style="width:100%">
-      <div class="w3-container">
-        <h4>Klaverøvelser</h4>
-      </div>
-    </div>
-  </div>
+  
+
+  <!--add more images here-->
 </div>
 
 
