--- a/galleri.html
+++ b/galleri.html
@@ -63,7 +63,7 @@ body {font-family: "Lato", sans-serif}
   <div class="w3-third">
     <div class="w3-card">
       <img src="static/Images/Kor2.jpg" style="width:100%">
-      <div class="w3-container">
+      <div class="w3-container w3-center">
         <h4>Koret - 29.10.2024</h4>
       </div>
     </div>
