--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body {font-family: "Lato", sans-serif}
 .mySlides {display: none}
 </style>
 </head>
-<body>
+<body class="">
 
 <div id="header"></div>
 
@@ -160,8 +160,8 @@ body {font-family: "Lato", sans-serif}
           </div>
         </div>
       </div> -->
-    </div>
-  </div>
+    
+  
 
   <!-- The Contact Section -->
   <div class="w3-container w3-content w3-padding-64" style="max-width:80%" id="kontakt">
@@ -176,7 +176,8 @@ body {font-family: "Lato", sans-serif}
       </div>
     </div>
   </div>
-  
+</div>
+</div>
 
   <!--     <div class="w3-col m6">
         <form action="/action_page.php" target="_blank">
