--- a/static/footer.html
+++ b/static/footer.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
+<footer class="w3-container w3-padding-64 w3-center w3-opacity w3-xlarge">
     <a href="https://www.facebook.com/profile.php?id=61565122624862&locale=da_DK" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
   <!--  <i class="fa fa-instagram w3-hover-opacity"></i>
     <i class="fa fa-snapchat w3-hover-opacity"></i>
