added new songs

--- a/repetoire.html
+++ b/repetoire.html
@@ -67,7 +67,7 @@ body {font-family: "Lato", sans-serif}
 
 <script>
 
-let data = ["Barn Jesus i en krybbe lå", "Dejlig er jorden", "Glade jul", "Hver gang det blir vinter", "In the bleak midwinter", "Lad det klinge", "O come all ye faithfull"];
+let data = ["Barn Jesus i en krybbe lå", "Dejlig er jorden", "Glade jul", "In the bleak midwinter",  "Hver gang det blir vinter", "Lad det klinge", "O come all ye faithfull", "A merry Christmas", "White Christmas", "Luk Julefreden ind", "Nu tændes tusind Julelys","Hvad er det, der gør jul til noget særligt", "Et Barn er født i Bethlehem"].sort();
 let songsDiv = document.getElementById("songs");
 for (i = 0; i < data.length; ++i) {
   let div = document.createElement('div');
