--- a/kalender.html
+++ b/kalender.html
@@ -28,11 +28,11 @@ body {font-family: "Lato", sans-serif}
 <div id="header"></div>
 
 <div class="w3-content" style="max-width:1200px;margin-top:46px">
-<!--Insert content here-->
+  <!--Insert content here-->
 
-<!-- The Calender Section -->
-<div class="w3-black" id="kalender">
-  <div class="w3-container w3-content w3-padding-64" style="max-width:80%">
+  <!-- The Calender Section -->
+  <div class="w3-black" id="kalender">
+    <div class="w3-container w3-content w3-padding-64" style="max-width:80%">
     <h2 class="w3-wide w3-center">KALENDER</h2>
     <p class="w3-opacity w3-center"><i>Se her hvornår vi øver og holder koncerter</i></p>
     <p class="w3-opacity w3-center w3-hide-large w3-hide-medium"><i>Øveaftener foregår på den kreative skole på Kongensgade 111, Lokale 2, syd 1</i></p><br>
@@ -137,6 +137,7 @@ body {font-family: "Lato", sans-serif}
         <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
       </tr>
     </table>
+  </div>
 </div>
 
 <div id="footer"></div>
