--- a/kalender.html
+++ b/kalender.html
@@ -97,15 +97,15 @@ body {font-family: "Lato", sans-serif}
       <tr>
         <td class="w3-hide-small">Tirsdag</td>
         <td>10.12.2024</td>
-        <td>Øveaften</td>
-        <td>19:00 - 21:30</td>
-        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
+        <td>Julekoncert</td>
+        <td>19:30 - 21:00</td>
+        <td class="w3-hide-small">Kongensgade 111, Den Store sal</td>
       </tr>
       <tr>
         <td class="w3-hide-small">Onsdag</td>
         <td>11.12.2024</td>
         <td>Julekoncert</td>
-        <td>Tilgår senere</td>
+        <td>19:30 - 21:00</td>
         <td class="w3-hide-small">Den Reformerte Kirke, Dronningensgade 87</td>
       </tr>
       <tr>
