--- a/index.html
+++ b/index.html
@@ -69,9 +69,23 @@ body {font-family: "Lato", sans-serif}
     <p class="w3-opacity"><i>Vi elsker musik</i></p>
     <p class="w3-justify">Vi byder dig velkommen til Frederiksodde koret, som blev dannet den 3. september 2024 som en spændende sammensmeltning af Lyngsoddekoret og Mandagskoret. Med 60 engagerede medlemmer synger vi i 4 stemmer, hvilket skaber en rig og harmonisk klang.
         Hos os er der plads til alle – der er ingen optagelsesprøver, og alle med lyst til at synge er hjerteligt velkomne. Vores øveaftener finder sted hver tirsdag fra kl. 19.00 til 21.30, hvor vi sammen udforsker og udvikler vores sangfærdigheder.
-        Kom og vær en del af fællesskabet i Frederiksoddekoret, hvor musikken binder os sammen!</p>
+        Kom og vær en del af fællesskabet i Frederiksodde koret, hvor musikken binder os sammen!</p>
     
   </div>
+
+  <div class="w3-container w3-center w3-content w3-padding-32" style="max-width:80%">
+    <div class="w3-hide-small">
+    <img src="static/Images/Nyheder/Julekoncert 10122024.jpg" alt="">
+    </div>
+    <div class="w3-hide-medium w3-hide-large">
+      <h2>KONCERT</h2>
+      <p class="w3-justify">Kom til Frederiksodde Korets første koncert i Den Store Sal på Kongensgade 111, 7000 Fredericia d. 10 december kl 19:30.</p>
+      <p class="w3-justify">Se detaljer <a href="static/Images/Nyheder/Julekoncert 10122024.jpg">her</a></p>
+    </div>
+  </div>
+
+  
+
 
   <div class="w3-container w3-content w3-center w3-padding-32" style="max-width: 80%;" id="bestyrelsen">
     <h2>BESTYRELSEN</h2>
