added new pictures

--- a/index.html
+++ b/index.html
@@ -96,25 +96,25 @@ body {font-family: "Lato", sans-serif}
     
       <div class="w3-quarter">
         <h3>Korleder</h3>
-        <img src="static/Images/dirigent.webp" class="" alt="Random Name" style="width:100%">
+        <img src="static/Images/LouiseHvilborg.jpg" class="" alt="Random Name" style="width:100%">
         <p>Louise Sletting Hvilborg</p>
       </div>
 
       <div class="w3-quarter">
-        <h3>Forperson</h3>
-        <img src="static/Images/Placeholder.jpg" class="" alt="Random Name" style="width:100%">
+        <h3>Formand</h3>
+        <img src="static/Images/HenningSørensen.jpg" class="" alt="Random Name" style="width:100%">
         <p>Henning Sørensen</p>
       </div>
 
       <div class="w3-quarter">
         <h3>Kasserer</h3>
-        <img src="static/Images/Placeholder.jpg" class="" alt="Random Name" style="width:100%">
+        <img src="static/Images/BentSerup.jpg" class="" alt="Random Name" style="width:100%">
         <p>Bent Ole Serup</p>
       </div>
 
       <div class="w3-quarter">
         <h3>Sekretær</h3>
-        <img src="static/Images/Placeholder.jpg" class="" alt="Random Name" style="width:100%">
+        <img src="static/Images/LoneJensen.jpg" class="" alt="Random Name" style="width:100%">
         <p>Lone Jensen</p>
       </div>
     </div>
@@ -124,17 +124,17 @@ body {font-family: "Lato", sans-serif}
       
       <div class="w3-quarter">
         <h3>Medlem</h3>
-        <img src="static/Images/Placeholder.jpg" class="" alt="Random Name" style="width:100%">
+        <img src="static/Images/ToniSørensen.jpg" class="" alt="Random Name" style="width:100%">
         <p>Toni Sørensen</p>
       </div>
       <div class="w3-quarter">
         <h3>Medlem</h3>
-        <img src="static/Images/Placeholder.jpg" class="" alt="Random Name" style="width:100%">
+        <img src="static/Images/BettinaJensen.jpg" class="" alt="Random Name" style="width:100%">
         <p>Bettina Jensen</p>
       </div>
       <div class="w3-quarter">
         <h3>Medlem</h3>
-        <img src="static/Images/Placeholder.jpg" class="" alt="Random Name" style="width:100%">
+        <img src="static/Images/MarianneMeyer.jpg" class="" alt="Random Name" style="width:100%">
         <p>Marianne Meyer</p>
       </div>
 
