--- a/kalender.html
+++ b/kalender.html
@@ -47,55 +47,6 @@ body {font-family: "Lato", sans-serif}
       </tr>
       <tr>
         <td class="w3-hide-small">Tirsdag</td>
-        <td>22.10.2024</td>
-        <td>Øveaften</td>
-        <td>19:00 - 21:30</td>
-        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
-      </tr>
-      <tr>
-        <td class="w3-hide-small">Tirsdag</td>
-        <td>29.10.2024</td>
-        <td>Øveaften</td>
-        <td>19:00 - 21:30</td>
-        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
-      </tr>
-      <tr>
-        <td class="w3-hide-small">Tirsdag</td>
-        <td>05.11.2024</td>
-        <td>Øveaften</td>
-        <td>19:00 - 21:30</td>
-        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
-      </tr>
-      <tr>
-        <td class="w3-hide-small">Tirsdag</td>
-        <td>12.11.2024</td>
-        <td>Øveaften</td>
-        <td>19:00 - 21:30</td>
-        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
-      </tr>
-      <tr>
-        <td class="w3-hide-small">Tirsdag</td>
-        <td>19.11.2024</td>
-        <td>Øveaften</td>
-        <td>19:00 - 21:30</td>
-        <td class="w3-hide-small">Tilgår senere</td>
-      </tr>
-      <tr>
-        <td class="w3-hide-small">Tirsdag</td>
-        <td>26.11.2024</td>
-        <td>Øveaften</td>
-        <td>19:00 - 21:30</td>
-        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
-      </tr>
-      <tr>
-        <td class="w3-hide-small">Tirsdag</td>
-        <td>03.12.2024</td>
-        <td>Øveaften</td>
-        <td>19:00 - 21:30</td>
-        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
-      </tr>
-      <tr>
-        <td class="w3-hide-small">Tirsdag</td>
         <td>10.12.2024</td>
         <td>Julekoncert</td>
         <td>19:30 - 21:00</td>
@@ -132,6 +83,139 @@ body {font-family: "Lato", sans-serif}
       <tr>
         <td class="w3-hide-small">Tirsdag</td>
         <td>07.01.2025</td>
+        <td>Øveaften</td>
+        <td>19:00 - 21:30</td>
+        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
+      </tr>
+      <tr>
+        <td class="w3-hide-small">Tirsdag</td>
+        <td>14.01.2025</td>
+        <td>Øveaften</td>
+        <td>19:00 - 21:30</td>
+        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
+      </tr>
+      <tr>
+        <td class="w3-hide-small">Tirsdag</td>
+        <td>21.01.2025</td>
+        <td>Øveaften</td>
+        <td>19:00 - 21:30</td>
+        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
+      </tr>
+      <tr>
+        <td class="w3-hide-small">Tirsdag</td>
+        <td>28.01.2025</td>
+        <td>Øveaften</td>
+        <td>19:00 - 21:30</td>
+        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
+      </tr>
+      <tr>
+        <td class="w3-hide-small">Søndag</td>
+        <td>02.02.2025</td>
+        <td>Fællessang</td>
+        <td>14:00 - 16:00</td>
+        <td class="w3-hide-small">Kongensgade 111, Store Sal</td>
+      </tr>
+      <tr>
+        <td class="w3-hide-small">Tirsdag</td>
+        <td>04.02.2025</td>
+        <td>Øveaften</td>
+        <td>19:00 - 21:30</td>
+        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
+      </tr>
+      <tr>
+        <td class="w3-hide-small">Tirsdag</td>
+        <td>11.02.2025</td>
+        <td>Vinterferie</td>
+        <td></td>
+        <td class="w3-hide-small"></td>
+      </tr>
+      <tr>
+        <td class="w3-hide-small">Tirsdag</td>
+        <td>18.02.2025</td>
+        <td>Øveaften</td>
+        <td>19:00 - 21:30</td>
+        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
+      </tr>
+      <tr>
+        <td class="w3-hide-small">Tirsdag</td>
+        <td>25.02.2025</td>
+        <td>Øveaften</td>
+        <td>19:00 - 21:30</td>
+        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
+      </tr>
+      <tr>
+        <td class="w3-hide-small">Tirsdag</td>
+        <td>04.03.2025</td>
+        <td>Øveaften</td>
+        <td>19:00 - 21:30</td>
+        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
+      </tr>
+      <tr>
+        <td class="w3-hide-small">Tirsdag</td>
+        <td>11.03.2025</td>
+        <td>Øveaften</td>
+        <td>19:00 - 21:30</td>
+        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
+      </tr>
+      <tr>
+        <td class="w3-hide-small">Tirsdag</td>
+        <td>18.03.2025</td>
+        <td>Øveaften + Gen.forsaml.</td>
+        <td>19:00 - 21:30</td>
+        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
+      </tr>
+      <tr>
+        <td class="w3-hide-small">Tirsdag</td>
+        <td>25.03.2025</td>
+        <td>Øveaften</td>
+        <td>19:00 - 21:30</td>
+        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
+      </tr>
+      <tr>
+        <td class="w3-hide-small">Tirsdag</td>
+        <td>01.04.2025</td>
+        <td>Øveaften</td>
+        <td>19:00 - 21:30</td>
+        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
+      </tr>
+      <tr>
+        <td class="w3-hide-small">Tirsdag</td>
+        <td>08.04.2025</td>
+        <td>Øveaften</td>
+        <td>19:00 - 21:30</td>
+        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
+      </tr>
+      <tr>
+        <td class="w3-hide-small">Tirsdag</td>
+        <td>15.04.2025</td>
+        <td>Øveaften</td>
+        <td>19:00 - 21:30</td>
+        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
+      </tr>
+      <tr>
+        <td class="w3-hide-small">Tirsdag</td>
+        <td>22.04.2025</td>
+        <td>Øveaften</td>
+        <td>19:00 - 21:30</td>
+        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
+      </tr>
+      <tr>
+        <td class="w3-hide-small">Tirsdag</td>
+        <td>29.04.2025</td>
+        <td>Øveaften</td>
+        <td>19:00 - 21:30</td>
+        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
+      </tr>
+      <tr>
+        <td class="w3-hide-small">Tirsdag</td>
+        <td>06.05.2025</td>
+        <td>Øveaften</td>
+        <td>19:00 - 21:30</td>
+        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
+      </tr>
+      <tr>
+        <td class="w3-hide-small">Tirsdag</td>
+        <td>13.05.2025</td>
         <td>Øveaften</td>
         <td>19:00 - 21:30</td>
         <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
