--- a/index.html
+++ b/index.html
@@ -67,9 +67,18 @@ body {font-family: "Lato", sans-serif}
   <div class="w3-container w3-content w3-center w3-padding-32" style="max-width:80%">
   
     <p class="w3-opacity"><i>Vi elsker musik</i></p>
-    <p class="w3-justify">Vi byder dig velkommen til Frederiksodde koret, som blev dannet den 3. september 2024 som en spændende sammensmeltning af Lyngsoddekoret og Mandagskoret. Med 60 engagerede medlemmer synger vi i 4 stemmer, hvilket skaber en rig og harmonisk klang.
+    <p class="w3-justify">Vi byder dig velkommen til Frederiksodde koret, som blev dannet den 1. september 2024 som en spændende sammensmeltning af Lyngsoddekoret og Mandagskoret. Med 60 engagerede medlemmer synger vi i 4 stemmer, hvilket skaber en rig og harmonisk klang.
         Hos os er der plads til alle – der er ingen optagelsesprøver, og alle med lyst til at synge er hjerteligt velkomne. Vores øveaftener finder sted hver tirsdag fra kl. 19.00 til 21.30, hvor vi sammen udforsker og udvikler vores sangfærdigheder.
         Kom og vær en del af fællesskabet i Frederiksodde koret, hvor musikken binder os sammen!</p>
+    <br>
+    <br>
+    <h2>BERETNING FOR PERIODEN 1/9 2024 TIL 18/3 2025</h2>
+    <br>
+    <p class="w3-justify">Den 1/9 2024 blev Lyngsoddekoret og Mandagskoret lagt sammen, og blev til byens nye store kor. Et flertal af medlemmerne i de to kor valgte at korets navn skulle være Frederiksodde Koret. Koret ledes af Louise Sletting Hvilborg, og har desuden fået sit helt eget logo.</p>
+    <p class="w3-justify">Tre medlemmer fra hvert af de to kor dannede en overgangsbestyrelse, som har virket indtil første ordinære generalforsamling, hvor den endelige bestyrelse vælges.</p>
+    <p class="w3-justify">Koret lagde ud med fire nye sange til et repertoire, inden vi tog fat på et juleprogram som udmøntede sig i to koncerter i henholdsvis Kongensgade 111 samt Reformert Kirke. Begge med stor succes.</p>
+    <p class="w3-justify">Derefter en hyggelig julefrokost med underholdning af forskellig art inden juleferien.</p>
+    <p class="w3-justify">Opstart igen den 7 januar og klargøring til syng sammen arrangement den 2 februar med Jørgen Andersen. På grund af kunstudstilling i store sal, foregik det i Tavlehallen med dennes klanglige begrænsning.</p>
     
   </div>
 
