--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@ body {font-family: "Lato", sans-serif}
   <div class="w3-container w3-content w3-center w3-padding-32" style="max-width:80%">
   
     <p class="w3-opacity"><i>Vi elsker musik</i></p>
-    <p class="w3-justify">Vi byder dig velkommen til Frederiksodde koret, som blev dannet den 1. september 2024 som en spændende sammensmeltning af Lyngsoddekoret og Mandagskoret. Med 60 engagerede medlemmer synger vi i 4 stemmer, hvilket skaber en rig og harmonisk klang. Vi hører hjemme på den Kreative Skole på Kongensgade i Fredericia.
-        Hos os er der plads til alle – der er ingen optagelsesprøver, og alle med lyst til at synge er hjerteligt velkomne. Vores øveaftener finder sted hver tirsdag fra kl. 19.00 til 21.30, hvor vi sammen udforsker og udvikler vores sangfærdigheder.
+    <p class="w3-justify">Vi byder dig velkommen til Frederiksodde koret, som blev dannet den 1. september 2024 som en spændende sammensmeltning af Lyngsoddekoret og Mandagskoret. Med 60 engagerede medlemmer synger vi i 4 stemmer, hvilket skaber en rig og harmonisk klang. 
+        Hos os er der plads til alle – der er ingen optagelsesprøver, og alle med lyst til at synge er hjerteligt velkomne. Vores øveaftener finder sted hver tirsdag på den Kreative skole på Kongensgade i Fredericia, fra kl. 19.00 til 21.30, hvor vi sammen udforsker og udvikler vores sangfærdigheder.
         Kom og vær en del af fællesskabet i Frederiksodde koret, hvor musikken binder os sammen!</p>
     <br>
     <br>
