--- a/kalender.html
+++ b/kalender.html
@@ -47,97 +47,6 @@ body {font-family: "Lato", sans-serif}
       </tr>
       <tr>
         <td class="w3-hide-small">Tirsdag</td>
-        <td>10.12.2024</td>
-        <td>Julekoncert</td>
-        <td>19:30 - 21:00</td>
-        <td class="w3-hide-small">Kongensgade 111, Den Store sal</td>
-      </tr>
-      <tr>
-        <td class="w3-hide-small">Onsdag</td>
-        <td>11.12.2024</td>
-        <td>Julekoncert</td>
-        <td>19:30 - 21:00</td>
-        <td class="w3-hide-small">Den Reformerte Kirke, Dronningensgade 87</td>
-      </tr>
-      <tr>
-        <td class="w3-hide-small">Tirsdag</td>
-        <td>17.12.2024</td>
-        <td>Julefrokost</td>
-        <td>19:00 - ?</td>
-        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
-      </tr>
-      <tr>
-        <td class="w3-hide-small">Tirsdag</td>
-        <td>24.12.2024</td>
-        <td>Juleferie</td>
-        <td></td>
-        <td class="w3-hide-small"></td>
-      </tr>
-      <tr>
-        <td class="w3-hide-small">Tirsdag</td>
-        <td>31.12.2024</td>
-        <td>Juleferie</td>
-        <td></td>
-        <td class="w3-hide-small"></td>
-      </tr>
-      <tr>
-        <td class="w3-hide-small">Tirsdag</td>
-        <td>07.01.2025</td>
-        <td>Øveaften</td>
-        <td>19:00 - 21:30</td>
-        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
-      </tr>
-      <tr>
-        <td class="w3-hide-small">Tirsdag</td>
-        <td>14.01.2025</td>
-        <td>Øveaften</td>
-        <td>19:00 - 21:30</td>
-        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
-      </tr>
-      <tr>
-        <td class="w3-hide-small">Tirsdag</td>
-        <td>21.01.2025</td>
-        <td>Øveaften</td>
-        <td>19:00 - 21:30</td>
-        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
-      </tr>
-      <tr>
-        <td class="w3-hide-small">Tirsdag</td>
-        <td>28.01.2025</td>
-        <td>Øveaften</td>
-        <td>19:00 - 21:30</td>
-        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
-      </tr>
-      <tr>
-        <td class="w3-hide-small">Søndag</td>
-        <td>02.02.2025</td>
-        <td>Fællessang</td>
-        <td>14:00 - 16:00</td>
-        <td class="w3-hide-small">Kongensgade 111, Store Sal</td>
-      </tr>
-      <tr>
-        <td class="w3-hide-small">Tirsdag</td>
-        <td>04.02.2025</td>
-        <td>Øveaften</td>
-        <td>19:00 - 21:30</td>
-        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
-      </tr>
-      <tr>
-        <td class="w3-hide-small">Tirsdag</td>
-        <td>11.02.2025</td>
-        <td>Vinterferie</td>
-        <td></td>
-        <td class="w3-hide-small"></td>
-      </tr>
-      <tr>
-        <td class="w3-hide-small">Tirsdag</td>
-        <td>18.02.2025</td>
-        <td>Øveaften</td>
-        <td>19:00 - 21:30</td>
-        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
-      </tr>
-      <tr>
-        <td class="w3-hide-small">Tirsdag</td>
         <td>25.02.2025</td>
         <td>Øveaften</td>
         <td>19:00 - 21:30</td>
@@ -221,6 +130,7 @@ body {font-family: "Lato", sans-serif}
         <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
       </tr>
     </table>
+  </div>
   </div>
 </div>
 
