--- a/repetoire.html
+++ b/repetoire.html
@@ -58,7 +58,7 @@ body {font-family: "Lato", sans-serif}
 
 <div class="w3-panel w3-center">
   <h1>Repetoire</h1>
-  <p> Her kan du se og downloade de sange vi synger i Frederiksoddekoret</p>
+  <p> Her kan du se og downloade de sange vi synger i Frederiksodde Koret</p>
 </div>
 
 <hr>
