--- a/praktisk.html
+++ b/praktisk.html
@@ -78,7 +78,7 @@ body {font-family: "Lato", sans-serif}
       Parkering</button>
       
 <div id="parkering" class="w3-hide w3-container w3-center w3-light-grey">
-  <p class="w3-center"">Man kan parkere gratis langs Kongensgade foran skolen. Hvis der ikke er plads på Kongensgade kan man også parkere gratis ved Fredericia Sundhedshus på Dronningensgade 97 som er fem minutters gang fra skolen.</p>
+  <p class="w3-center">Man kan parkere gratis langs Kongensgade foran skolen. Hvis der ikke er plads på Kongensgade kan man også parkere gratis ved Fredericia Sundhedshus på Dronningensgade 97 som er fem minutters gang fra skolen.</p>
 </div>
 
 </div>
@@ -89,6 +89,8 @@ body {font-family: "Lato", sans-serif}
 
 
 </div>
+
+<br>
 
 <div id="footer"></div>
 
