--- a/kalender.html
+++ b/kalender.html
@@ -69,7 +69,7 @@ body {font-family: "Lato", sans-serif}
       <tr>
         <td class="w3-hide-small">Tirsdag</td>
         <td>18.03.2025</td>
-        <td>Øveaften + Gen.forsaml.</td>
+        <td>Generalforsamling</td>
         <td>19:00 - 21:30</td>
         <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
       </tr>
