--- a/index.html
+++ b/index.html
@@ -72,6 +72,21 @@ body {font-family: "Lato", sans-serif}
         Kom og vær en del af fællesskabet i Frederiksodde koret, hvor musikken binder os sammen!</p>
     <br>
     <br>
+    <h2 id ="generalforsamling">GENERALFORSAMLING DEN 18. MARTS 2025</h2>
+    <p class="w3-justify">Der afholdes ordinær generalforsamling tirsdag den 18 marts 2025 kl.19.00 i vores sædvanlige øvelokale. ( BEMÆRK: Der øves ikke på repertoire denne aften)</p>
+    <p class="w3-justify">DAGSORDEN:</p>
+    
+    <p class="w3-justify">1. VALG AF DIRIGENT</p>
+    <p class="w3-justify">2.    FORMANDENS BERETNING </p>
+    <p class="w3-justify">3.    REGNSKABSAFLÆGGELSE OG GODKENDELSE </p>
+    <p class="w3-justify">4.    VALG AF BESTYRELSE SAMT 2 SUPPLEANTER </p>
+    <p class="w3-justify">5.    VALG AF BILAGSKONTROLLANT SAMT 1 SUPPLEANT </p>
+    <p class="w3-justify">6.    VALG AF FESTUDVALG ( 4 PERSONER ) </p>
+    <p class="w3-justify">7.    INDKOMNE FORSLAG </p>
+    <p class="w3-justify">8.    KONCERTPÅKLÆDNING </p>
+    <p class="w3-justify">9.    EVENTUELT</p>
+    <br>
+
     <h2>BERETNING FOR PERIODEN 1/9 2024 TIL 18/3 2025</h2>
     <br>
     <p class="w3-justify">Den 1/9 2024 blev Lyngsoddekoret og Mandagskoret lagt sammen, og blev til byens nye store kor. Et flertal af medlemmerne i de to kor valgte at korets navn skulle være Frederiksodde Koret. Koret ledes af Louise Sletting Hvilborg, og har desuden fået sit helt eget logo.</p>
