--- a/praktisk.html
+++ b/praktisk.html
@@ -81,6 +81,14 @@ body {font-family: "Lato", sans-serif}
   <p class="w3-center">Man kan parkere gratis langs Kongensgade foran skolen. Hvis der ikke er plads på Kongensgade kan man også parkere gratis ved Fredericia Sundhedshus på Dronningensgade 97 som er fem minutters gang fra skolen.</p>
 </div>
 
+<button onclick="accordian('regnskab')" class="w3-btn w3-block w3-black w3-margin-top">
+  Regnskab</button>
+  
+<div id="regnskab" class="w3-hide w3-container w3-center w3-light-grey">
+<p class="w3-center">Her kan du se tidligere årsregnskaber</p>
+<a href="static/Documents/Regnskab 2024.pdf">2024</a>
+</div>
+
 </div>
 
 
