--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ body {font-family: "Lato", sans-serif}
     
     <p class="w3-justify">1. VALG AF DIRIGENT</p>
     <p class="w3-justify">2.    FORMANDENS BERETNING </p>
-    <p class="w3-justify">3.    REGNSKABSAFLÆGGELSE OG GODKENDELSE </p>
+    <p class="w3-justify">3.    REGNSKABSAFLÆGGELSE OG GODKENDELSE (find regnskab for 2024 <a href="praktisk.html#regnskab">her</a>)</p>
     <p class="w3-justify">4.    VALG AF BESTYRELSE SAMT 2 SUPPLEANTER </p>
     <p class="w3-justify">5.    VALG AF BILAGSKONTROLLANT SAMT 1 SUPPLEANT </p>
     <p class="w3-justify">6.    VALG AF FESTUDVALG ( 4 PERSONER ) </p>
