--- a/praktisk.html
+++ b/praktisk.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Frederiksodde koret</title>
+<title>Frederiksodde koret | Praktisk</title>
+<link rel="icon" type="image/x-icon" href="static/Images/logo3.png">
 <script
   src="https://code.jquery.com/jquery-3.7.1.min.js"
   integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
