--- a/template.html
+++ b/template.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <title>Frederiksodde koret</title>
+<link rel="icon" type="image/x-icon" href="static/Images/favicon.png">
 <script
   src="https://code.jquery.com/jquery-3.7.1.min.js"
   integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
