--- a/index.html
+++ b/index.html
@@ -73,6 +73,14 @@ body {font-family: "Lato", sans-serif}
         Kom og vær en del af fællesskabet i Frederiksodde koret, hvor musikken binder os sammen!</p>
     <br>
     <br>
+    <div class="w3-container">
+      <h2>FORÅRSKONCERT D. 20 MAJ 2025 KL. 19.00</h2>
+      <p class="w3-justify">Frederiksodde koret holder forårskoncert d. 20 maj kl 19.00 ved Kongensgade 111, Den Store Sal, 7000 Fredericia. 
+        Entré koster 50 kr som kan betales med MobilePay eller kontant</p>
+      <p class="w3-justify w3-hide-large w3-hide-medium">Se plakaten <a href="static/Images/Nyheder/Forårskoncert_25_plakat.pdf.pdf">her</a></p>
+      <img class="w3-hide-small" src="static/Images/Nyheder/Forårskoncert_2025.png" alt="Forårskoncert den 20 maj 2025 kl. 19 ved kongensgade 111, store sal">
+    </div>
+    
     <h2 id ="generalforsamling">GENERALFORSAMLING DEN 18. MARTS 2025</h2>
     <p class="w3-justify">Der afholdes ordinær generalforsamling tirsdag den 18 marts 2025 kl.19.00 i vores sædvanlige øvelokale. ( BEMÆRK: Der øves ikke på repertoire denne aften)</p>
     <p class="w3-justify">DAGSORDEN:</p>
