--- a/kalender.html
+++ b/kalender.html
@@ -48,84 +48,140 @@ body {font-family: "Lato", sans-serif}
       </tr>
       <tr>
         <td class="w3-hide-small">Tirsdag</td>
-        <td>25.02.2025</td>
+        <td>02.09.2025</td>
         <td>Øveaften</td>
         <td>19:00 - 21:30</td>
         <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
       </tr>
       <tr>
         <td class="w3-hide-small">Tirsdag</td>
-        <td>04.03.2025</td>
+        <td>09.09.2025</td>
         <td>Øveaften</td>
         <td>19:00 - 21:30</td>
         <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
       </tr>
       <tr>
         <td class="w3-hide-small">Tirsdag</td>
-        <td>11.03.2025</td>
+        <td>16.09.2025</td>
         <td>Øveaften</td>
         <td>19:00 - 21:30</td>
         <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
       </tr>
       <tr>
         <td class="w3-hide-small">Tirsdag</td>
-        <td>18.03.2025</td>
-        <td><a href="index.html#generalforsamling">Generalforsamling</a></td>
-        <td>19:00 - 21:30</td>
-        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
-      </tr>
-      <tr>
-        <td class="w3-hide-small">Tirsdag</td>
-        <td>25.03.2025</td>
+        <td>23.09.2025</td>
         <td>Øveaften</td>
         <td>19:00 - 21:30</td>
         <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
       </tr>
       <tr>
         <td class="w3-hide-small">Tirsdag</td>
-        <td>01.04.2025</td>
+        <td>30.09.2025</td>
+        <td>KONCERT</td>
+        <td>Tilgår</td>
+        <td class="w3-hide-small">Vejstrup Kirke</td>
+      </tr>
+      <tr>
+        <td class="w3-hide-small">Tirsdag</td>
+        <td>07.10.2025</td>
+        <td>FRI</td>
+        <td></td>
+        <td class="w3-hide-small"></td>
+      </tr>
+      <tr>
+        <td class="w3-hide-small">Tirsdag</td>
+        <td>14.10.2025</td>
         <td>Øveaften</td>
         <td>19:00 - 21:30</td>
         <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
       </tr>
       <tr>
         <td class="w3-hide-small">Tirsdag</td>
-        <td>08.04.2025</td>
+        <td>21.10.2025</td>
         <td>Øveaften</td>
         <td>19:00 - 21:30</td>
         <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
       </tr>
       <tr>
         <td class="w3-hide-small">Tirsdag</td>
-        <td>15.04.2025</td>
+        <td>28.10.2025</td>
         <td>Øveaften</td>
         <td>19:00 - 21:30</td>
         <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
       </tr>
       <tr>
         <td class="w3-hide-small">Tirsdag</td>
-        <td>22.04.2025</td>
+        <td>04.11.2025</td>
         <td>Øveaften</td>
         <td>19:00 - 21:30</td>
         <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
       </tr>
       <tr>
         <td class="w3-hide-small">Tirsdag</td>
-        <td>29.04.2025</td>
+        <td>11.11.2025</td>
         <td>Øveaften</td>
         <td>19:00 - 21:30</td>
         <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
       </tr>
       <tr>
         <td class="w3-hide-small">Tirsdag</td>
-        <td>06.05.2025</td>
+        <td>18.11.2025</td>
         <td>Øveaften</td>
         <td>19:00 - 21:30</td>
         <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
       </tr>
       <tr>
         <td class="w3-hide-small">Tirsdag</td>
-        <td>13.05.2025</td>
+        <td>25.11.2025</td>
+        <td>Øveaften</td>
+        <td>19:00 - 21:30</td>
+        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
+      </tr>
+      <tr>
+        <td class="w3-hide-small">Tirsdag</td>
+        <td>02.12.2025</td>
+        <td>Øveaften</td>
+        <td>19:00 - 21:30</td>
+        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
+      </tr>
+      <tr>
+        <td class="w3-hide-small">Tirsdag</td>
+        <td>09.12.2025</td>
+        <td>Øveaften</td>
+        <td>19:30 - 21:00</td>
+        <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
+      </tr>
+      <tr>
+        <td class="w3-hide-small">Tirsdag</td>
+        <td>10.12.2025</td>
+        <td>JULEKONCERT</td>
+        <td>19:30 - 21:00</td>
+        <td class="w3-hide-small">Den Reformerte Kirke, Dronningensgade 87</td>
+      </tr>
+      <tr>
+        <td class="w3-hide-small">Tirsdag</td>
+        <td>16.12.2025</td>
+        <td>JULEFERIE</td>
+        <td></td>
+        <td class="w3-hide-small"></td>
+      </tr>
+      <tr>
+        <td class="w3-hide-small">Tirsdag</td>
+        <td>23.12.2025</td>
+        <td>JULEFERIE</td>
+        <td></td>
+        <td class="w3-hide-small"></td>
+      </tr>
+      <tr>
+        <td class="w3-hide-small">Tirsdag</td>
+        <td>30.12.2025</td>
+        <td>JULEFERIE</td>
+        <td></td>
+        <td class="w3-hide-small"></td>
+      </tr>
+      <tr>
+        <td class="w3-hide-small">Tirsdag</td>
+        <td>06.01.2025</td>
         <td>Øveaften</td>
         <td>19:00 - 21:30</td>
         <td class="w3-hide-small">Kongensgade 111, Lokale 2, syd 1</td>
