--- a/index.html
+++ b/index.html
@@ -74,6 +74,15 @@ body {font-family: "Lato", sans-serif}
     <br>
     <br>
     <div class="w3-container">
+      <h2>EFTERÅRSKONCERT D. 30 SEPTEMBER 2025 KL. 19.00</h2>
+      <p class="w3-justify">Frederiksodde koret holder efterårskoncert d. 30 september kl 19.00 ved Kongensgade 111, Den Store Sal, 7000 Fredericia. 
+        Entré er gratis.</p>
+      <p class="w3-justify w3-hide-large w3-hide-medium">Se plakaten <a href="static/Images/Nyheder/Efterårskoncert 25.pdf.pdf">her</a></p>
+      <img class="w3-hide-small" src="static/Images/Nyheder/Efterårskoncert 2025.png" alt="Efterårskoncert den 30 September 2025 kl. 19 ved kongensgade 111, store sal">
+    </div>
+    <br>
+    <br>
+    <div class="w3-container">
       <h2>FORÅRSKONCERT D. 20 MAJ 2025 KL. 19.00</h2>
       <p class="w3-justify">Frederiksodde koret holder forårskoncert d. 20 maj kl 19.00 ved Kongensgade 111, Den Store Sal, 7000 Fredericia. 
         Entré koster 50 kr som kan betales med MobilePay eller kontant</p>
