--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ body {font-family: "Lato", sans-serif}
     <br>
     <div class="w3-container">
       <h2>EFTERÅRSKONCERT D. 30 SEPTEMBER 2025 KL. 19.00</h2>
-      <p class="w3-justify">Frederiksodde koret holder efterårskoncert d. 30 september kl 19.00 ved Kongensgade 111, Den Store Sal, 7000 Fredericia. 
+      <p class="w3-justify">Frederiksodde koret holder efterårskoncert d. 30 september kl 19.00 ved Vejstrup Kirke, Sjølund Gade 25, 6093 Sjølund. 
         Entré er gratis.</p>
       <p class="w3-justify w3-hide-large w3-hide-medium">Se plakaten <a href="static/Images/Nyheder/Efterårskoncert 25.pdf.pdf">her</a></p>
       <img class="w3-hide-small" src="static/Images/Nyheder/Efterårskoncert 2025.png" alt="Efterårskoncert den 30 September 2025 kl. 19 ved kongensgade 111, store sal">
