--- a/index.html
+++ b/index.html
@@ -74,6 +74,15 @@ body {font-family: "Lato", sans-serif}
     <br>
     <br>
     <div class="w3-container">
+      <h2>JULEKONCERT D. 10 DECEMBER 2025 KL. 19.30</h2>
+      <p class="w3-justify">Frederiksodde koret holder julekoncert d. 10 december kl 19.30 ved Den Reformerte Kirke, Dronningensgade 87, 7000 Fredericia. 
+        Entré er gratis.</p>
+      <p class="w3-justify w3-hide-large w3-hide-medium">Se plakaten <a href="static/Images/Nyheder/JULEKONCERT 2025.pdf.pdf">her</a></p>
+      <img class="w3-hide-small" src="static/Images/Nyheder/Julekoncert 2025.png" alt="Efterårskoncert den 30 September 2025 kl. 19 ved kongensgade 111, store sal">
+    </div>
+    <br>
+    <br>
+    <div class="w3-container">
       <h2>EFTERÅRSKONCERT D. 30 SEPTEMBER 2025 KL. 19.00</h2>
       <p class="w3-justify">Frederiksodde koret holder efterårskoncert d. 30 september kl 19.00 ved Vejstrup Kirke, Sjølund Gade 25, 6093 Sjølund. 
         Entré er gratis.</p>
